# tbg_llm_example

./: LICENSE  README.md  example.py  pyproject.toml
.github/workflows/: ci_testing.yml
src/: __init__.py
src/tbg_llm_example/: __init__.py  example.py  llmmodels.py
tests/: tests.py
